--- a/css/styles.css
+++ b/css/styles.css
@@ -459,6 +459,12 @@ button.navbar-toggle.collapsed:hover .icon-bar:nth-child(3){
 .navbar-nav li a{
   color: #ffffff!important;
 }
+.info-page h1 span:not(.light-font) {
+  display: inline-block;
+  width: 85%;
+  margin: 0 1%;
+  font-weight: 500; 
+}
 nav.navbar-right li {
 	 max-width: 400px;
 	 width: 100%;
@@ -685,7 +691,7 @@ footer p {
 }
 .social-media li {
   display: inline;
-  padding-left: 1.5em; 
+  padding-left: 1.45em; 
 }
 .social-media .separator {
   font-size: 1.5em;
@@ -724,16 +730,22 @@ footer p {
 .home .panel-title a {
 	color: #ffffff;
 }
+.home .panel-title a:hover,
+.home .panel-title a:focus,
+.home .panel-title a:visited {
+  text-decoration: none;
+}
 .panel-group .panel+.panel {
 	margin-top: 0;
 }
 .home .panel-title a.collapsed::before {
-	content: "\f107";
+  content: "\f067";
+  font-weight: 100; 
 	font-family: "FontAwesome";
 	color: #ffffff;
 }
 .home .panel-title a::before {
-	content: "\f106";
+	content: "\f068";
 	font-family: "FontAwesome";
 	color: #ffffff;
 }
@@ -780,12 +792,15 @@ footer p {
   font-weight: 500;
 
 }
-
+.box-container a {
+  text-decoration: underline;
+}
 .search-results .row {
     margin-top: 30px;
 }
 .search-box {
     box-shadow: 0 0px 7px #6b6b6b;
+    overflow: hidden;
 }
 .text {
   width: 80%;
@@ -855,6 +870,24 @@ footer p {
 }
 .compare-button {
   height: 50px;
+}
+.search-box.haku::before {
+  width: 81px;
+  height: 44px;
+  content: "Haku";
+  font-size: .91em;
+  padding: 23px 19px 0;
+  text-shadow: 0px 0px 2px rgba(150, 150, 150, 0.94);
+  position: absolute;
+  background: #7ed320;
+  left: -24px;
+  top: -19px;
+  color: #fff;
+  display: inline-block;
+  transform: rotate(-40deg);
+  -webkit-box-shadow: 3px 0px 10px 0px rgba(50, 50, 50, 0.69);
+  -moz-box-shadow:    3px 0px 10px 0px rgba(50, 50, 50, 0.69);
+  box-shadow:         3px 0px 10px 0px rgba(50, 50, 50, 0.69);
 }
 .compare-button span {
   border: 1px solid #4d93d9;
@@ -952,10 +985,9 @@ footer p {
 .right-column li {
   padding: 2%;
 }
-.right-column a {
+.right-column a.external-link {
   color: #4d93d9;
   font-weight: 500;
-
 }
 p.student-comment {
   font-size: 1.3em;
@@ -970,6 +1002,7 @@ p.student-comment {
 .oppilaitos .right-column {
   height: calc(100% + 200px);
   background-color: transparent; 
+  padding-top: 30px;
 }
 .oppilaitos .right-column {
   font-size: 1.2em;
@@ -1052,13 +1085,17 @@ p.student-comment {
 }
 .modal-header {
   padding: 0 30px;
-} 
-.course-info {
-  padding-left: 0;
-  font-weight: 500;
 }
-.education-info {
-  text-align: right
+.modal-footer a{
+  color: #ffffff;
+} 
+.modal-footer a:focus,
+.modal-footer a:visited {
+  text-decoration: none;
+}
+.course-info {
+  padding-left: 12px;
+  font-weight: 500;
 }
 .course-info div[class*="col-"] {
   padding: .4% 1%;
@@ -1111,6 +1148,91 @@ p.student-comment {
   width: 100%;
   max-height: 400px;
   height: 100%;
+  margin-top: 30px; 
+}
+.toteutus a.header:before {
+  font-family: "FontAwesome";
+  content: "\f190";
+  font-size: 2em;
+  float: left;
+  padding: 0 1.5% 0 0;
+}
+.left-column.toteutus h1 i{
+  color: #000000;
+}
+.left-column.toteutus h1 i::after{
+  content: "";
+}
+h1 a.header:hover,
+h1 a.header:visited,
+h1 a.header:focus {
+  text-decoration: none;
+  color: #000000;
+} 
+h1 a span {
+  display: block;
+  font-weight: 400;
+}
+hr {
+  border-top: 1px solid #979797;
+}
+.toteutus-green {
+  background: #00be9c;
+  color: #ffffff;
+  -webkit-box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.26);
+  -moz-box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.26);
+  box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.26);
+}
+.toteutus-blue {
+  background: #2c97df;
+  color: #ffffff;
+  -webkit-box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.26);
+  -moz-box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.26);
+  box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.26);
+}
+.toteutus-blue .info div {
+  padding-top: 7px;
+}
+.toteutus-green .header h2,
+.toteutus-blue .header h2 {
+  border-bottom: 1px solid #ffffff;
+  padding: 0 3% 3%;
+}
+.toteutus-green ul,
+.toteutus-blue ul {
+  list-style-type: none;
+  padding: 1%;
+}
+.toteutus-blue ul li {
+  padding: 5px 0;
+}
+.toteutus-blue .header i {
+  float: right;
+}
+.panel-body .info {
+  max-height: 300px;
+  height: 100%; 
+}
+p.btn-education {
+  text-align: center;
+  margin-top: 40px;
+}
+.appointment p.btn-education {
+  margin-top:0; 
+}
+
+p.btn-education .btn-default{
+  font-weight: 600;
+}
+.toteutus-green .btn-education {
+  margin: 40px 0;
+}
+.toteutus-green p {
+  margin-top: 19px;
+  padding-left: 15px;
+}
+strong {
+  font-weight: 500;
 }
 @media (max-width: 1200px) {
   .globe i {
@@ -1126,11 +1248,18 @@ p.student-comment {
   .globe i {
     font-size: 5.25em;
   }
+  footer p {
+    font-size: 1em;
+  }
+  .social-media li {
+    padding-left: .2em;
+  }
 }
 @media (max-width: 991px) {
   .box-container:nth-child(even) {
     margin-top: 30px;
   }
+
 }
 
 @media (max-width: 992px) {
@@ -1179,7 +1308,10 @@ p.student-comment {
     max-width: 100%;
   }
   .info-page .panel-heading h4 {
-    font-size: 1em;
+    font-size: .93em;
+  }
+  .info-page .left-column h1 i {
+    top: 0;
   }
   .haut .date {
     font-size: 4.5em;
@@ -1195,9 +1327,9 @@ p.student-comment {
   .header-search input {
     box-shadow: 0 0px 7px #6b6b6b;
     max-width: 554px;
-    width: 65%;
+    width: 75%;
     height: 43px;
-    margin-left: 5%;
+    margin-left: 4%;
   }
   .search-button {
     border: 4px solid #ffffff;
@@ -1216,14 +1348,28 @@ p.student-comment {
   ul.right-links li a {
     margin: 0;
   }
+  .filter-button {
+    padding: 1%;
+    width: 165px;
+    height: 40px
+  }
+  .filter-button::after {
+    position: relative;
+    top: 25%;
+    left: 12%;
+    font-size: .95em;
+  }
   h2 {
-    font-size: 20px;
+    font-size: 1.3em;
   }
   .panel-title a{
     font-size: 1.4em;
   }
+  .globe {
+    left: 5px;
+  }
   .globe i {
-    font-size: 5.25em;
+    font-size: 4.25em;
   }
   .nabvar-search.oph-input {
     display: none;
@@ -1247,11 +1393,58 @@ p.student-comment {
     min-height: 120px;
     height: auto;
   }
+  .social-media li {
+    display: inline;
+    padding-left: 0.5em;
 }
-@media (max-width: 768px) {
-  .panel-body .date {
-    font-size: 3.6em;
-  }
+.panel-body .date {
+  font-size: 3.6em;
+}
+footer p {
+  font-size: 1em;
+  padding: 4% 11%;
+  text-align: left;
+}
+footer .site-icons img {
+  height: 66px;
+}
+h1 {
+  font-size: 22px;
+}
+.social-media {
+  padding: 0;
+  width: fit-content;
+  margin: 0 auto;
+}
+.info-page.oppilaitos .left-column h1 i::after {
+  left: 13px;
+  top:13px;
+}
+.info-page .left-column h1 i::after {
+  left: 5px;
+}
+.info-page .panel-body p {
+  font-size: 1em;
+}
+}
+@media (max-width: 425px) {
+  .info-page .left-column h1 i {
+    top: 0;
+}
+.info-page h1 span:not(.light-font) {
+  float: left;
+  width: 80%;
+  padding: 4%;
+  color: #000000;
+}
+.info-page .left-column h1 i {
+  float: left;
+}
+}
+@media (max-width: 320px) {
+  .header-search input {
+    width: 70%;
+}
 }
 @media (min-width: 768px) {
   .navbar-toggle {
